# PathTracer

./: CMakeLists.txt  Scene.cpp  Tracer.cpp  main.cc  main.cpp
images/: image_09_07_2018_08:42:48.ppm  image_09_07_2018_08:50:17.ppm  image_09_07_2018_18:08:12.ppm  image_09_07_2018_18:09:26.ppm  image_09_07_2018_18:11:07.ppm
include/: Tracer.h  samplingUtils.h
include/algebraUtils/: Dir.h  Mat.h  Point.h
include/scene/: AreaLight.h  Camera.h  LightSource.h  Material.h  RGB.h  Ray.h  Scene.h  Texture.h
include/shapes/: Box.h  Circle.h  Cone.h  Cylinder.h  Mesh.h  Plane.h  Pyramid.h  Pyramid3.h  Pyramid4.h  Quad.h  Shape.h  Sphere.h  Triangle.h
src/: CMakeLists.txt  Tracer.cpp
src/scene/: AreaLight.cpp  CMakeLists.txt  Camera.cpp  Image.cpp  LightSource.cpp  Material.cpp  RGB.cpp  Ray.cpp  Scene.cpp  Texture.cpp
src/shapes/: Box.cpp  CMakeLists.txt  Circle.cpp  Cone.cpp  Cylinder.cpp  Mesh.cpp  Plane.cpp  Pyramid.cpp  Pyramid3.cpp  Pyramid4.cpp  Quad.cpp  Sphere.cpp  Triangle.cpp
